src/client/src/App.css
body {
  text-align: center;
}

nav {
  background-color: rgba(0,0,0,0.7);
  font-size: clamp(0.8rem, 1.5vw, 1rem);
}

a {
  color: #d48106;
}

.btn-wrapper {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

button, .btn {
  background: #d48106;
  border: 1px solid #d48106;
  transition: color 0.3s ease;
}

.btn:hover, .btn:active {
  background-color: #d48106 !important;
  border: 1px solid #d48106 !important;
  color: #333333 !important;
}

.form-check {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.hp-background {
  background-image: url("../src/images/mountain-bg.jpg");
  background-size: cover;
  background-position: center 20%;
  min-height: 100vh;
  offset: 20%;
  overflow: hidden;
}

.rp-background {
  background-image: url("../src/images/mountain-bg.jpg");
  background-size: cover;
  background-position: center 20%;
  background-attachment: fixed;
  overflow: hidden;
}

.overlay-container {
  position: absolute;
  top: 50%;
  left: 50%;
  padding: 8rem 0 4rem 0;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 350px;
  height: 100%;
  display: flex;
  align-items: space-evenly;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
  overflow: auto;
}

.overlay-box {
  text-wrap: balance;
  background-color: rgba(0,0,0,0.7);
  border-radius: 10px;
  padding: 2rem;
  width: 100%;
}

.form-overlay-container {
  position: absolute;
  top: 50%;
  left: 50%;
  padding: 8rem 0 4rem 0;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 800px;
  height: 100%;
  display: flex;
  align-items: space-evenly;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
  overflow: auto;
}

.form-overlay-box {
  text-wrap: balance;
  background-color: rgba(0,0,0,0.8);
  border-radius: 10px;
  padding: 2rem;
  width: 100%;
}

.overlay {
  position: relative;
  background-color: rgba(0,0,0,0.7);
  overflow-y: auto;
  min-height: 100vh;
}

.overlay-box:nth-of-type(2) {
  order: 3;
}

.overlay-box:nth-of-type(3) {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  order: 2;
}


.overlay-content {
  color: #f8fbfb;
}

.overlay-content.text {
  font-size: clamp(0.8rem, 1.5vw, 1rem);
}

.italics {
  font-style: italic;
}

.overlay-content.btn {
  border-radius: 10px;
  background: #d48106;
  color: white;
  font-size: clamp(0.8rem, 1.5vw, 1rem);
}

.overlay-content.btn:hover {
  color: #333333;
}

#mountain-icon {
  width: 3rem;
  height: 3rem;
  position: relative;
  top: 0.6rem;
}

.hp-icon {
  width: 1rem;
  height: 1rem;
}

#user-form, .form-text {
  color: white;
}

.peaks-list-container {
  overflow-x: scroll;
  overflow-y: hidden;
  font-size: clamp(0.8rem, 2vw, 1rem);
  height: 265px;
  background-color: #212529;
  transition: height 0.5s ease;
  text-align: left;
  border-top: 1px solid black;
}

.peaks-list-container.collapsed {
  height: 40px;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.recommended-text-collapsed {
  font-size: 1rem;
  line-height: 1rem;
  height: 1rem;
  margin: 0;
  margin-bottom: 5px;
}

.peaks-list {
  padding: 0;
  list-style-type: none;
  white-space: nowrap;
  text-align: center;
}

.peaks-list li {
  display: inline-block;
  padding: 0 10px 10px 10px;
}

.filter-text {
  margin-left: 32px;;
}

.list-text-wrapper, .filter-options {
  position: sticky;
  left: 0;
}

.peak-img {
  width: 10rem;
  box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
}

.peak-img, .top-peak-img {
  border-radius: 1rem;
}

/* Recommendations page styles */

#rp-container {
  padding-bottom: 4rem;
}

#routes-table, #current-weather-table, #forecast-table, .additional-info, .top-peak-img {
  box-shadow: 10px 10px 10px rgba(0,0,0,0.8);
}

.top-peak-name {
  margin-top: 5px;
  font-size: clamp(1rem, 3vw, 2rem);
}

.distance-text {
  text-wrap: balance;
}

.best-match-text, .weather-title, .forecast-title, .routes-title, .ready-text {
  font-size: clamp(1rem, 3vw, 1.5rem);
}

.routes-title {
  align-self: center;
}

.top-peak-img {
  width: 100%;
  max-width: 300px;
}

.top-peak-description {
  font-size: clamp(0.9rem, 2vw, 1.2rem);
  margin: 2rem 0 1rem 0;
  text-wrap: balance;
  text-align: center;
}

.best-match-text, .top-peak-description, .top-peak-name, .elevation-text, .range-text, .distance-text, .weather-title, .forecast-title, .routes-title, .ready-text, .recommended-route-text, .rr-icon {
  text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
}

.edit-preferences-btn {
  background-color: transparent;
  color: #d48106;
  border: 1px solid transparent;
}

.edit-preferences-btn:hover {
  background-color: transparent !important;
  color: #d48106 !important;
  border: 1px solid transparent !important;
}

.top-peak-li:hover {
  cursor: pointer;
}

.recommended-route-text {
  font-size: clamp(0.8rem, 2vw, 1rem);
}

table {
  font-size: 0.6rem;
  text-align: left;
}

.weather-col, .routes-col {
  padding: 0;
}

.weather-col {
  margin-top: 1rem;
}

.additional-info {
  background-color: #212529;
  padding: 2rem;
}

.close-list-icon {
  position: relative;
  left: 1rem;
  animation: bounce 2s infinite;
}

.open-list-icon {
  animation: bounce 2s infinite;
}

.close-list-icon, .open-list-icon:hover {
  cursor: pointer;
}

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-5px);
  }
  60% {
    transform: translateY(-2px);
  }
}

.rp-hr {
  color: #d48106;
  height: 1px;
  position: fixed;
  width: 100%;
}

.form-select option:nth-child(odd) {
  background-color: darkgray;
  color: #333333;
}

.form-select option:nth-child(even) {
  background-color: lightgray;
  color: #333333;
}

#filter-radio-fieldset {
  color: white;
  display: flex;
  flex-wrap: wrap;
  row-gap: 0;
  column-gap: 0.5rem;
  width: 100vw;
  justify-content: space-evenly;
  position: sticky;
  left: 0;
}

#filter-radio-fieldset .form-check {
  display: inline;
}

.white-text {
  color: white;
}

.yellow-text {
  color: #d48106;
}

.add-peaks-area {
  margin: 1rem 2rem;
}

.selectedListItem {
  background-color: #212529;
  color: white;
}

.completed-peaks-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
}

.added-peaks-area {
  position: sticky;
  top: 1rem;
}

.peaks-to-add-list {
  padding: 0;
}

.peaks-to-add li {
  list-style-type: none;
}

.addPeaksBar span {
  cursor: pointer;
}

.peaks-list-filter {
  box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
  border-radius: 10px;
}

.peakListItem {
  cursor: pointer;
}

.search-bar {
  position: sticky;
  top: 1rem;
  z-index: 100;
}

.completed-peak-card {
  box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
}

.card-range-text {
  font-weight: 500;
}

.delete-peak-btn {
  background: #dc3545;
  border: 1px solid #dc3545;
}

.edit-btns-wrapper {
  display: flex;
  justify-content: center;
  gap: 0.2rem;
}

.add-photos-btn, .save-date-btn {
  background: #198754;
  border: 1px solid #198754;
}

@media (min-width: 300px) {
  .weather-col, .routes-col {
    padding: 0 12px;
  }
}

@media (min-width: 350px) {
  table {
    font-size: 0.8rem;
  }
  .peaks-list-container {
    height: 235px;
  }
}

@media (min-width: 425px) {
  .peaks-list-container {
    height: 250px;
  }
}

@media (min-width: 468px) {
  #filter-radio-fieldset {
    color: white;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    width: 100vw;
    justify-content: space-evenly;
    position: sticky;
    left: 0;
  }
}

@media (min-width: 576px) {
  .top-peak-description {
    text-align: left;
    margin-top: 0;
  }
  .weather-col {
    margin-top: 0;
  }
}

@media (min-width: 750px) {
  .overlay-container {
    flex-direction: row;
    justify-content: space-evenly;
    width: 100%;
    max-width: none;
    min-height: 50%;
    top: 65%;
    padding: 0;
  }

  .overlay-box {
    width: 30%;
    height: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
  }

  .overlay-box:nth-of-type(3) {
    order: 3;
  }

  .overlay-box:nth-of-type(3) p {
    margin: 0;
  }

  #weather-icon {
    margin-top: 1rem;
  }
}

#user-form {
  width: 100%;
}

.form-label {
  display: block;
}

.map {
  height: 100%;
  width: 100%;
}

.map-container {
  margin: 0 auto;
  height: 60vh;
  width: 85vh;
}

@media (min-width: 1600px) {
  .overlay-box:nth-of-type(3) {
    flex-direction: row;
  }
}

